--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           </ul>
         </section>
 
+        <div class="slogan">
+          <h1>Scegli l'inglese studiato <br> per i professionisti </h1>
+          <button type="button" name="button">struttura un piano</button>
+        </div>
+
     </header>
 <!-- /Parte superiore della pagina -->
 
