--- a/index.html
+++ b/index.html
@@ -36,5 +36,45 @@
     </header>
 <!-- /Parte superiore della pagina -->
 
+<!-- corpo -->
+
+  <main>
+    <div class="inizio-corpo">
+      <h3>Le scuole di lingua non sono efficaci</h3>
+      <p>Solo un corso basato sulla fluency puo portare ad una soluzione concreta</p>
+    </div>
+
+    <section>
+      <div class="blocco">
+        <div class="immagine">
+
+        </div>
+        <h5>Piano formativo configurato</h5>
+        <h5>sul proprio livello</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore </p>
+
+      </div>
+      <div class="blocco2">
+        <div class="immagine2">
+
+        </div>
+        <h5>Piano formativo configurato</h5>
+        <h5>sul proprio livello</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore </p>
+
+      </div>
+      <div class="blocco2">
+        <div class="immagine3">
+
+        </div>
+        <h5>Piano formativo configurato</h5>
+        <h5>sul proprio livello</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore </p>
+
+      </div>
+    </section>
+  </main>
+<!-- /corpo -->
+
   </body>
 </html>
